--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-oidentd v2.0.5 by Ryan McCabe <odin@numb.org>
+oidentd v2.0.5 by Ryan McCabe <ryan@numb.org>
 
 oidentd is an ident (rfc1413 compliant) daemon that runs on Linux, Darwin,
 FreeBSD, OpenBSD, NetBSD and Solaris.  oidentd can handle IP masqueraded/NAT
@@ -18,7 +18,4 @@ The most recent version of oidentd will always be available at
 http://dev.ojnk.net
 
 Please mail any suggestions, questions, comments, bug reports, et cetera to
-me at odin@numb.org
-
-
-$Id: README,v 1.1 2002/12/03 06:02:52 odin Exp $
+me at ryan@numb.org
