--- a/doc/oidentd_masq.conf.5
+++ b/doc/oidentd_masq.conf.5
@@ -1,4 +1,4 @@
-.\" Copyright (C)  2001-2002  Ryan McCabe.
+.\" Copyright (C)  2001-2003  Ryan McCabe <ryan@numb.org>.
 .\"
 .\" Permission is granted to copy, distribute and/or modify this document
 .\" under the terms of the GNU Free Documentation License, Version 1.1
@@ -7,9 +7,7 @@
 .\" Front-Cover Texts being no front-cover texts, and with the Back-Cover
 .\" Texts being no back-cover texts.  A copy of the license is included with
 .\" this package in the file "COPYING.DOC."
-.\"
-.\" $Id: oidentd_masq.conf.5,v 1.1 2002/12/03 06:04:30 odin Exp $
-.TH oidentd_masq.conf 5 "30 Dec 2001" "version 2.0.5"
+.TH oidentd_masq.conf 5 "11 Feb 2003" "version 2.0.5"
 
 .SH NAME
 oidentd_masq.conf - oidentd IP masquerading/NAT configuration file.
@@ -67,7 +65,7 @@ somehost					user5			UNIX
 .LP
 
 .SH AUTHOR
-Ryan McCabe <odin@numb.org>
+Ryan McCabe <ryan@numb.org>
 .br
 http://dev.ojnk.net
 
