Fix stack corruption on FreeBSD 4+
The oldlenp argument to sysctlbyname in src/kernel/freebsd4.c had an incorrect
pointer type, which caused a write to an arbitrary memory location on systems
where sizeof(size_t) > sizeof(int).

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,10 @@ Daniel Brafford <pod@charter.net>
 Guus Sliepen <sliepen@phys.uu.nl>
 	Initial netfilter (Linux >= 2.3 Support).
 
+Janik Rabe <info@janikrabe.com>
+	Maintainer
+	Bugfixes
+
 Kamil Andrusz <wizz@mniam.net>
 	OpenBSD >= 3.0 Packet Filter support.
 
