--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jan  7 10:05:00 IST 2018    Janik Rabe <info@janikrabe.com>
+
+    * Released as version 2.1.0.
+
+    * Fix memory corruption on FreeBSD.
+
 Mon May 22 00:20:15 EDT 2006    Ryan McCabe <ryan@numb.org>
 
     * Released as version 2.0.8.
