--- a/README
+++ b/README
@@ -2,11 +2,11 @@ oidentd v2.1.0 by Janik Rabe <info@janikrabe.com>
 Originally written by Ryan McCabe <ryan@numb.org>
 
 oidentd is an RFC 1413 compliant ident daemon that runs on Linux, Darwin,
-FreeBSD, OpenBSD, NetBSD and Solaris. oidentd can handle IP masqueraded/NAT
-connections on Linux, Darwin, FreeBSD (ipf only), OpenBSD and NetBSD. oidentd
-has a flexible mechanism for specifying ident responses. Users can be granted
-permission to specify their own responses, and different responses can be sent
-depending on host and port pairs.
+FreeBSD, OpenBSD, NetBSD, DragonflyBSD and Solaris. oidentd can handle IP
+masqueraded/NAT connections on Linux, Darwin, FreeBSD (ipf only), OpenBSD,
+NetBSD and DragonflyBSD. oidentd has a flexible mechanism for specifying ident
+responses. Users can be granted permission to specify their own responses, and
+different responses can be sent depending on host and port pairs.
 
 For details on how to install oidentd see the INSTALL file.
 
