Drop NetBSD 5+ and SunOS 5.1+ support for now
Due to the changes these versions introduced to their respective kernels
I am not sure whether oidentd can easily be made compatible with current
versions of these systems.

--- a/doc/oidentd.8
+++ b/doc/oidentd.8
@@ -207,8 +207,8 @@ Ryan McCabe <ryan@numb.org>
 .br
 https://github.com/janikrabe/oidentd
 
-.SH BUGS
-Solaris lacks IPv6 support and NAT support.
+.SH REPORTING BUGS
+Please report any bugs to Janik Rabe <info@janikrabe.com>.
 
 .SH "SEE ALSO"
 .BR oidentd.conf (5)
