Use gender-neutral pronouns

--- a/doc/oidentd.conf.5
+++ b/doc/oidentd.conf.5
@@ -144,10 +144,10 @@ Valid capabilities are \fIreply\fP, \fIrandom\fP, \fInumeric\fP,
 .SH CAPABILITIES
 .TP
 .B spoof
-Allow spoofed ident responses; allow the user to specify a string of her
-choosing as the ident reply. The only restriction on the spoofed response is
-that it must not be the username of another user. When a user spoofs her ident
-reply, the login name of the user is recorded along with the forged reply.
+Allow spoofed ident responses; allow the user to specify any string as the
+ident reply. The only restriction on the spoofed response is that it must not
+be the username of another user. When a user spoofs their ident reply, the
+login name of the user is recorded along with the forged reply.
 .br
 This capability does not apply to the \fIforce\fP action.
 .TP
