--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,8 @@
 Issuing the commands "./configure", then "make", then "make install" will
 (respectively) configure, compile and install the oidentd daemon and its
-manual page.  By default, the daemon is installed in /usr/local/sbin/oidentd,
-and the uncompressed manual page is installed in /usr/local/man/man8.
+manual pages.  By default, the daemon is installed in /usr/local/sbin/oidentd,
+and the uncompressed manual pages are installed in /usr/local/share/man/man5
+and /usr/local/share/man/man8.
 
 IPv6 and IP masquerade support are enabled by default on platforms that support
 them.  To disable IPv6 support, pass the --disable-ipv6 option to the configure
@@ -12,14 +13,14 @@ If you're having problems with oidentd, additional debugging information is
 available when the --enable-debug option is passed to the configure script and
 oidentd is run with the --debug flag.
 
-oidentd version 2 runs only as a standalone daemon.  Therefore, any entries for
-ident in any inetd or xinetd (or any other "super server") configuration
+oidentd version 2 runs only as a standalone daemon.  Therefore, any entries
+for ident in any inetd or xinetd (or any other "super server") configuration
 files must be disabled before running oidentd.  This is the case for
 performance reasons; when oidentd starts up, it parses the /etc/oidentd.conf
-configuration file.  If oidentd ran from inetd (or similar), for every
-incoming connection, it would have to parse the configuration file.  Running
-standalone lets oidentd parse the file once at startup and after that, only
-when it receives a SIGHUP.
+configuration file.  If oidentd ran from inetd (or similar), it would have to
+parse the configuration file for each incoming connection.  Running standalone
+lets oidentd parse the file once at startup and after that only when it
+receives a SIGHUP.
 
 Users running inetd can locate such lines by running the command
 "egrep ^(auth|ident) /etc/inetd.conf".  Lines that show up must be
@@ -29,14 +30,14 @@ it the SIGHUP signal (signal 1).
 
 oidentd does not ordinarily require superuser privileges and should not
 run as root, if possible.  Do note, however, that oidentd must start up
-as root so that it can bind port 113 (if no --port argument is given)
-and so that it can open /dev/kmem on operating systems that require that.
-Once oidentd does this, it can drop any extra privileges.
-oidentd does require running as root on FreeBSD 4.x, however, when IP
-masquerade support is disabled or when IPv6 support is enabled.
-
-oidentd also must be run as root on OpenBSD 3.0 and greater, as it uses
-a privileged ioctl to look up connection owners and NAT information.
+as root so that it can bind port 113 (if no --port argument is given),
+and so that it can open /dev/kmem on operating systems on which this is
+required. Once oidentd does this, it can drop any extra privileges. The
+file KERNEL_SUPPORT.md contains a list of operating systems that require
+access to /dev/kmem.  Note, however, that some configurations may require
+oidentd to start up as root even when kernel memory access is not needed.
+For example, this is the case on Linux if IP/NAT masquerade support is
+enabled, so that oidentd can open the connection tracking file.
 
 For information regarding setting the user and group that oidentd will run as,
 please see the descriptions of the "--user" and "--group" command-line
